--- a/HollerUp/HollerUp/XIBS/Payments/PaymentHeaderCell.xib
+++ b/HollerUp/HollerUp/XIBS/Payments/PaymentHeaderCell.xib
@@ -32,6 +32,9 @@
                         <fontDescription key="fontDescription" name="Lato-Medium" family="Lato" pointSize="16"/>
                         <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
+                        <variation key="heightClass=regular-widthClass=regular">
+                            <fontDescription key="fontDescription" name="Lato-Medium" family="Lato" pointSize="18"/>
+                        </variation>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="$107" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VMo-Gt-0kO">
                         <rect key="frame" x="201" y="25" width="85" height="30"/>
@@ -42,6 +45,9 @@
                         <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="35"/>
                         <color key="textColor" red="0.99215686270000003" green="0.79607843140000001" blue="0.43137254899999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
+                        <variation key="heightClass=regular-widthClass=regular">
+                            <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="40"/>
+                        </variation>
                     </label>
                 </subviews>
                 <color key="backgroundColor" red="0.97244364023208618" green="0.97260981798171997" blue="0.97243314981460571" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
