--- a/HollerUp/HollerUp/XIBS/Profile/LogoutCell.xib
+++ b/HollerUp/HollerUp/XIBS/Profile/LogoutCell.xib
@@ -27,8 +27,12 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Empty" translatesAutoresizingMaskIntoConstraints="NO" id="2PM-ad-fwZ">
                         <rect key="frame" x="15" y="10" width="30" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="75p-Gw-uJb"/>
-                            <constraint firstAttribute="width" constant="30" id="uEX-lF-VJt"/>
+                            <constraint firstAttribute="height" constant="30" id="75p-Gw-uJb">
+                                <variation key="heightClass=regular-widthClass=regular" constant="50"/>
+                            </constraint>
+                            <constraint firstAttribute="width" constant="30" id="uEX-lF-VJt">
+                                <variation key="heightClass=regular-widthClass=regular" constant="50"/>
+                            </constraint>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Logout" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="myN-mh-jW5">
@@ -36,9 +40,12 @@
                         <constraints>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="53" id="TDP-cr-K2y"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="Lato-Medium" family="Lato" pointSize="17"/>
+                        <fontDescription key="fontDescription" name="Lato-Medium" family="Lato" pointSize="16"/>
                         <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
+                        <variation key="heightClass=regular-widthClass=regular">
+                            <fontDescription key="fontDescription" name="Lato-Medium" family="Lato" pointSize="18"/>
+                        </variation>
                     </label>
                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="61Q-GR-jhf">
                         <rect key="frame" x="256" y="9.5" width="51" height="31"/>
