--- a/HollerUp/HollerUp/XIBS/Profile/NameCell.xib
+++ b/HollerUp/HollerUp/XIBS/Profile/NameCell.xib
@@ -27,23 +27,30 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ProfilePlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="Q2w-lq-2q3">
                         <rect key="frame" x="15" y="5" width="50" height="50"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="50" id="Lcg-3x-6ay"/>
-                            <constraint firstAttribute="height" constant="50" id="j46-Oc-3MR"/>
+                            <constraint firstAttribute="width" constant="50" id="Lcg-3x-6ay">
+                                <variation key="heightClass=regular-widthClass=regular" constant="60"/>
+                            </constraint>
+                            <constraint firstAttribute="height" constant="50" id="j46-Oc-3MR">
+                                <variation key="heightClass=regular-widthClass=regular" constant="60"/>
+                            </constraint>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vamsi Bindu" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zld-c8-bIa">
-                        <rect key="frame" x="108.5" y="18.5" width="103.5" height="23"/>
+                        <rect key="frame" x="80" y="18.5" width="103.5" height="23"/>
                         <fontDescription key="fontDescription" name="Lato-Medium" family="Lato" pointSize="19"/>
                         <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
+                        <variation key="heightClass=regular-widthClass=regular">
+                            <fontDescription key="fontDescription" name="Lato-Medium" family="Lato" pointSize="22"/>
+                        </variation>
                     </label>
                 </subviews>
                 <color key="backgroundColor" red="0.97244364019999996" green="0.97260981800000001" blue="0.97243314979999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
                     <constraint firstItem="zld-c8-bIa" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="4TK-AZ-X8c"/>
-                    <constraint firstItem="zld-c8-bIa" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="DTq-xQ-qpr"/>
                     <constraint firstItem="Q2w-lq-2q3" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Y0c-lR-eoY"/>
                     <constraint firstItem="Q2w-lq-2q3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="oBa-zB-v2X"/>
+                    <constraint firstItem="zld-c8-bIa" firstAttribute="leading" secondItem="Q2w-lq-2q3" secondAttribute="trailing" constant="15" id="pGQ-X3-Lr9"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
