--- a/HollerUp/HollerUp/XIBS/Profile/ProfileDetailsCell.xib
+++ b/HollerUp/HollerUp/XIBS/Profile/ProfileDetailsCell.xib
@@ -27,8 +27,12 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Empty" translatesAutoresizingMaskIntoConstraints="NO" id="ivA-hK-WU5">
                         <rect key="frame" x="15" y="10" width="30" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="30" id="WHs-LU-1tQ"/>
-                            <constraint firstAttribute="height" constant="30" id="k2o-FS-Ne1"/>
+                            <constraint firstAttribute="width" constant="30" id="WHs-LU-1tQ">
+                                <variation key="heightClass=regular-widthClass=regular" constant="50"/>
+                            </constraint>
+                            <constraint firstAttribute="height" constant="30" id="k2o-FS-Ne1">
+                                <variation key="heightClass=regular-widthClass=regular" constant="50"/>
+                            </constraint>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Mobile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3ZZ-bP-TqV">
@@ -36,15 +40,21 @@
                         <constraints>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="53" id="yHP-EA-Y1L"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="Lato-Medium" family="Lato" pointSize="17"/>
+                        <fontDescription key="fontDescription" name="Lato-Medium" family="Lato" pointSize="16"/>
                         <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
+                        <variation key="heightClass=regular-widthClass=regular">
+                            <fontDescription key="fontDescription" name="Lato-Medium" family="Lato" pointSize="18"/>
+                        </variation>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+91 9533565007" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MLf-D0-aOy">
                         <rect key="frame" x="121" y="15" width="184" height="20"/>
-                        <fontDescription key="fontDescription" name="Lato-Medium" family="Lato" pointSize="17"/>
+                        <fontDescription key="fontDescription" name="Lato-Medium" family="Lato" pointSize="16"/>
                         <color key="textColor" red="0.54117647059999996" green="0.54117647059999996" blue="0.54117647059999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
+                        <variation key="heightClass=regular-widthClass=regular">
+                            <fontDescription key="fontDescription" name="Lato-Medium" family="Lato" pointSize="18"/>
+                        </variation>
                     </label>
                 </subviews>
                 <color key="backgroundColor" red="0.97244364019999996" green="0.97260981800000001" blue="0.97243314979999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
